--- a/health_form/server/javascript/express/package.json
+++ b/health_form/server/javascript/express/package.json
@@ -5,7 +5,8 @@
   "main": "src/main.js",
   "scripts": {
     "start": "node src/main.js",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "dev": "nodemon -e js -w src src/main.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "nodemon": "^2.0.20"
   }
 }
