--- a/health_form/server/javascript/nestjs/package.json
+++ b/health_form/server/javascript/nestjs/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
     "cookie-parser": "^1.4.6",
     "helmet": "^6.0.1",
