misc - vscode - extension

--- a/misc/vscode/harold-snippets/package.json
+++ b/misc/vscode/harold-snippets/package.json
@@ -250,7 +250,7 @@
         "properties": {
           "jsonOutline.autorefresh": {
             "type": "boolean",
-            "default": false
+            "default": true
           }
         }
       }
