--- a/misc/vscode/harold-snippets/package.json
+++ b/misc/vscode/harold-snippets/package.json
@@ -166,10 +166,23 @@
           "id": "package-explorer",
           "title": "Package Explorer",
           "icon": "media/dep.svg"
+        },
+        {
+          "id": "webview",
+          "title": "Example for webview",
+          "icon": "./assets/extension-icon.png"
         }
       ]
     },
     "views": {
+      "webview": [
+        {
+          "type": "webview",
+          "id": "left-panel-webview",
+          "name": "Webview",
+          "icon": "src/assets/extension-icon.png"
+        }
+      ],
       "vscode-chatgpt-view-container": [
         {
           "type": "webview",
@@ -402,24 +415,28 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.76.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.76.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "@vscode/test-electron": "^2.2.3",
     "eslint": "^8.34.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^4.9.5",
     "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "@vscode/test-electron": "^2.2.3"
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "ftp": "^0.3.10",
     "jsonc-parser": "^3.2.0",
-    "mkdirp": "^2.1.5"
+    "mkdirp": "^2.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
