--- a/misc/vscode/harold-snippets/tsconfig.json
+++ b/misc/vscode/harold-snippets/tsconfig.json
@@ -1,15 +1,24 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "ES2020",
+		"target": "es5",
 		"lib": [
-			"ES2020"
+			"ES2020",      "dom",
+			"dom.iterable",
+			"esnext"
 		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true, /* enable all strict type-checking options */
-		"noImplicitAny": false,
-		"suppressImplicitAnyIndexErrors": false
+		"allowJs": true,
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+		"jsx": "preserve",
+		"noImplicitAny": false
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
